--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -19,4 +19,4 @@ secret_key_base: <TEST_SECRET_KEY_BASE>
 # Do not keep production secrets in the repository,
 # instead read values from the environment.
 production:
-secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+secret_key_base: <%= ENV["secret_key_base"] %>
