--- a/config/database.yml
+++ b/config/database.yml
@@ -8,10 +8,14 @@ default: &default
   adapter: mysql2
   pool: 5
   timeout: 5000
+  encoding: utf8
 
 development:
   <<: *default
   database: buzzbeeDev
+  username: root
+  password:
+  socket: /tmp/mysql.sock
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
