--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,26 @@ pickle-email-*.html
 config/initializers/secret_token.rb
 config/secrets.yml
 
+.idea
+.idea/.DS_Store
+.idea/.generators
+.idea/.name
+.idea/.rakeTasks
+.idea/my-project.iml
+.idea/dataSources.ids
+.idea/dataSources.xml
+.idea/encodings.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/scopes
+.idea/scopes/scope_settings.xml
+.idea/vcs.xml
+.idea/workspace.xml
+/.idea/workspace.xml
+/.idea/tasks.xml
+.DS_Store
+.iml
+
 ## Environment normalisation:
 /.bundle
 /vendor/bundle
